--- a/views/event_view.xml
+++ b/views/event_view.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <openerp>
     <data>
-        <record id="view_website_event_table_form" model="ir.ui.view">
-            <field name="name">websit.event.table.form</field>
+        <record id="view_website_event_list_form" model="ir.ui.view">
+            <field name="name">websit.event.list.form</field>
             <field name="model">event.event</field>
             <field name="inherit_id" ref="event.view_event_form"/>
             <field name="priority" eval="8"/>
